--- a/store.html
+++ b/store.html
@@ -11,7 +11,7 @@
 
     <div id="container">
       <div id="mainHeader">
-        <img src="./assets/logo2.png" alt="logo" height="190px" width="190px">
+        <img src="./assets/logo2comp.png" alt="logo" height="190px" width="190px">
         <div id="storeTitle">
           <h1>STORE</h1>
           <h2>Here are the items we have for sale</h2>
