--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="container">
       <div id="mainHeader">
-        <img src="./assets/logo2.png" alt="logo" height="190px" width="190px">
+        <img src="./assets/logo2comp.png" alt="logo" height="190px" width="190px">
         <div id="headerTitle">
           <h1>Worcester County Firefighter's Emerald Society</h1>
           <h2>Irish American Firefighters of Worcester County, Massachusetts</h2>
@@ -33,12 +33,12 @@
           </div>
         </div>
         <div id="slideshow">
-          <div ><img src="./assets/slideshow/slideshow1.jpg" alt="" width="640px" height="400px"></div>
-          <div ><img src="./assets/slideshow/slideshow8.jpg" alt="" width="640px" height="400px"></div>
-          <div ><img src="./assets/slideshow/slideshow3.jpg" alt="" width="640px" height="400px"></div>
-          <div ><img src="./assets/slideshow/slideshow6.jpg" alt="" width="640px" height="400px"></div>
-          <div ><img src="./assets/slideshow/slideshow5.jpg" alt="" width="640px" height="400px"></div>
-          <div ><img src="./assets/slideshow/slideshow7.jpg" alt="" width="640px" height="400px"></div>
+          <div ><img src="./assets/slideshow/slideshow1-compressor.jpg" alt="" width="640px" height="400px"></div>
+          <div ><img src="./assets/slideshow/slideshow8-compressor.jpg" alt="" width="640px" height="400px"></div>
+          <div ><img src="./assets/slideshow/slideshow3-compressor.jpg" alt="" width="640px" height="400px"></div>
+          <div ><img src="./assets/slideshow/slideshow6-compressor.jpg" alt="" width="640px" height="400px"></div>
+          <div ><img src="./assets/slideshow/slideshow5-compressor.jpg" alt="" width="640px" height="400px"></div>
+          <div ><img src="./assets/slideshow/slideshow7-compressor.jpg" alt="" width="640px" height="400px"></div>
         </div>
       </div>
       <h3 id="descPara">The mission of the WCFFES is to celebrate the history and achievements of the Irish in the American Fire Services, while helping its members to become more connected with their roots through education, social events and genealogical research assistance.</h3>
