--- a/photos.html
+++ b/photos.html
@@ -9,7 +9,7 @@
 
     <div id="container">
       <div id="mainHeader">
-        <img src="./assets/logo2.png" alt="logo" height="190px" width="190px">
+        <img src="./assets/logo2comp.png" alt="logo" height="190px" width="190px">
         <div id="headerTitle">
           <h1>Photo Gallery</h1>
         </div>
