changed the store page to say coming soon.

--- a/store.html
+++ b/store.html
@@ -14,7 +14,7 @@
         <img src="./assets/logo2comp.png" alt="logo" height="190px" width="190px">
         <div id="storeTitle">
           <h1>STORE</h1>
-          <h2>Here are the items we have for sale</h2>
+          <h2>Coming Soon...</h2>
         </div>
       </div>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div id="store">
-          <p>Click an item to go to the store</p>
+          
           <a href="#"><img src="./assets/tshirt.jpg" alt=""></a>
         </div>
       </div>
