added announcement and new links

--- a/mission.html
+++ b/mission.html
@@ -26,11 +26,10 @@
             <li><a href="store.html">Store</a></li>
             <li><a href="board.html">Board Members</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://docs.google.com/document/d/1g5JmKMooCKTTb7T5f42TSW58deQnID8zIanfsanVRJk/edit?usp=sharing" target="_blank">By Laws</a></li>
+            <li><a href="https://docs.google.com/document/d/1vu2lz8ua1gB64TWkIe0iZvmaPpEUi6LVVtUsSJuFrWY/edit?usp=sharing" target="_blank">Pay Dues Here</a></li>
           </nav>
 
-          <div id="paypalDues">
-            <h3>Pay dues</h3>
-          </div>
         </div>
 
         <div id="mission">
