added new logo to all pages

--- a/board.html
+++ b/board.html
@@ -11,7 +11,7 @@
 
     <div id="container">
       <div id="mainHeader">
-        <img src="./assets/logo2comp.png" alt="logo" height="190px" width="190px">
+        <img src="./assets/badge-1.png" alt="logo" height="190px" width="190px">
         <div id="headerTitle">
           <h1>Board Members</h1>
         </div>
