--- a/mission.html
+++ b/mission.html
@@ -11,7 +11,7 @@
 
     <div id="container">
       <div id="mainHeader">
-        <img src="./assets/logo2comp.png" alt="logo" height="190px" width="190px">
+        <img src="./assets/badge-1.png" alt="logo" height="190px" width="190px">
         <div id="missionTitle">
           <h1>Mission Statement</h1>
           <p>The mission of the WCFFES is to celebrate the history and achievements of the Irish in the American Fire Services</p>
