added social media links to all pages

--- a/board.html
+++ b/board.html
@@ -27,6 +27,8 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="https://docs.google.com/document/d/1g5JmKMooCKTTb7T5f42TSW58deQnID8zIanfsanVRJk/edit?usp=sharing" target="_blank">By Laws</a></li>
             <li><a href="https://docs.google.com/document/d/1vu2lz8ua1gB64TWkIe0iZvmaPpEUi6LVVtUsSJuFrWY/edit?usp=sharing" target="_blank">Pay Dues Here</a></li>
+            <li><a href="https://www.facebook.com/WCFFES" target="_blank">Facebook<img src="./assets/facebook.svg"></a></li>
+            <li><a href="https://www.instagram.com/wcffes" target="_blank">Instagram<img src="./assets/instagram.svg"></a></li>
           </nav>
         </div>
 
