--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="https://docs.google.com/document/d/1g5JmKMooCKTTb7T5f42TSW58deQnID8zIanfsanVRJk/edit?usp=sharing" target="_blank">By Laws</a></li>
             <li><a href="https://docs.google.com/document/d/1vu2lz8ua1gB64TWkIe0iZvmaPpEUi6LVVtUsSJuFrWY/edit?usp=sharing" target="_blank">Pay Dues Here</a></li>
+            <li><a href="https://www.facebook.com/WCFFES" target="_blank">Facebook<img src="./assets/facebook.svg"></a></li>
+            <li><a href="https://www.instagram.com/wcffes" target="_blank">Instagram<img src="./assets/instagram.svg"></a></li>
           </nav>
 
           <!--<div id="paypalDues">
@@ -49,9 +51,9 @@
           <p>-State Firefighters' & Fire Marshals' Association of Texas</p>
           <p>-Florida State Firefighters Association</p>
           <p>-IAFF Disaster Relief Fund</p>
-          <a href="https://www.customink.com/fundraising/emeraldsocietyhurricanerelief">Click Here to buy a shirt and support those affected by the recent hurricanes.</a>
+          <a href="https://www.customink.com/fundraising/emeraldsocietyhurricanerelief" target="_blank">Click Here to buy a shirt and support those affected by the recent hurricanes.</a>
           <br>
-          <a href="https://www.customink.com/fundraising/emeraldsocietyhurricanerelief"><img src="./assets/hurricaneshirts.jpg"></a>
+          <a href="https://www.customink.com/fundraising/emeraldsocietyhurricanerelief" target="_blank"><img src="./assets/hurricaneshirts.jpg"></a>
           <br>
           <h1><u>Upcoming Events</u>:</h1>
           <h2>AIG Fenway Hurling Classic</h2>
