--- a/board.html
+++ b/board.html
@@ -38,9 +38,9 @@
           <li><b>Vice President</b> - Kenneth Jones (Lunenburg Fire)</li>
           <li><b>Treasurer</b> - Rick Howard (Lunenburg Fire - Retired)</li>
           <li><b>Secretary</b> - Raquel Howard</li>
-          <li><b>Sergeant-at-Arms</b> - Derek Jordan (Wayland Fire)</li>
+          <li><b>Sergeant-at-Arms</b> - Steve Brosque (Sterling Fire)</li>
           <h3>Board Of Directors</h3>
-          <li>Shayne Newton (Leominster Fire)</li>
+          <li>Nick Finizio (Sterling Fire)</li>
           <li>Daniel Hehir (Westborough Fire)</li>
           <li>Colin Sanabria (Princeton Fire)</li>
           <li>Katherine Kusza (Ashburnham Fire - Retired)</li>
