made some changes

--- a/board.html
+++ b/board.html
@@ -45,7 +45,7 @@
           <li>Colin Sanabria (Princeton Fire)</li>
           <li>Katherine Kusza (Ashburnham Fire - Retired)</li>
           <li>PJ Chamberlain (Clinton Fire)</li>
-          <li>James V. Roy (Posthumously awarded August 29, 2012 - Fitchburg Fire)</li>
+          <li>James V. Roy (Posthumously awarded 8/29/2012 - Fitchburg Fire)</li>
           <h3>Chaplain</h3>
           <li>Rev. Michael Clements (Fitchburg Fire)</li>
         </div>
