fixed some grammar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
-    <title>Worcester County Firefighter's Emerald Society</title>
+    <title>Worcester County Firefighters' Emerald Society</title>
   </head>
   <body>
   
@@ -13,7 +13,7 @@
       <div id="mainHeader">
         <img src="./assets/badge-1.png" alt="logo" height="190px" width="190px">
         <div id="headerTitle">
-          <h1>Worcester County Firefighter's Emerald Society</h1>
+          <h1>Worcester County Firefighters' Emerald Society</h1>
           <h2>Irish American Firefighters of Worcester County, Massachusetts</h2>
         </div>
       </div>
