updated content about store

--- a/mission.html
+++ b/mission.html
@@ -23,7 +23,7 @@
           <nav id="mainNav">
             <li><a href="index.html">Home</a></li>
             <li><a href="mission.html">Mission Statement</a></li>
-            <li><a href="store.html">Store</a></li>
+            <li><a href="http://wcfes2018.itemorder.com" target="_blank">Store</a></li>
             <li><a href="board.html">Board Members</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="https://docs.google.com/document/d/1g5JmKMooCKTTb7T5f42TSW58deQnID8zIanfsanVRJk/edit?usp=sharing" target="_blank">By Laws</a></li>
