added a picture to the front page. added list of upcoming meetings to front page. Updated to Board of directors.

--- a/board.html
+++ b/board.html
@@ -22,7 +22,7 @@
           <nav id="mainNav">
             <li><a href="index.html">Home</a></li>
             <li><a href="mission.html">Mission Statement</a></li>
-            <li><a href="http://wcfes2018.itemorder.com" target="_blank">Store</a></li>
+            <!--<li><a href="http://wcfes2018.itemorder.com" target="_blank">Store</a></li>-->
             <li><a href="#">Board Members</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="https://docs.google.com/document/d/1g5JmKMooCKTTb7T5f42TSW58deQnID8zIanfsanVRJk/edit?usp=sharing" target="_blank">By Laws</a></li>
@@ -34,8 +34,8 @@
 
         <div id="board">
           <h3>Executive Board</h3>
-          <li><b>President</b> - Jamieson C. Shea (Sterling Fire)</li>
-          <li><b>Vice President</b> - Kenneth Jones (Lunenburg Fire)</li>
+          <li><b>President</b> - Richard Howard (Lunenburg Fire - Retired)</li>
+          <li><b>Vice President</b> - Shawn McKenna</li>
           <li><b>Treasurer</b> - Rick Howard (Lunenburg Fire - Retired)</li>
           <li><b>Secretary</b> - Raquel Howard</li>
           <li><b>Sergeant-at-Arms</b> - Steve Brosque (Sterling Fire)</li>
